--- a/index.html
+++ b/index.html
@@ -5,8 +5,165 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+      <header class="main-header">
+          <div class="container">
+              <div class="logo">
+                  <img src="№" alt="">
+              </div>
+              <ul class="main-menu">
+                  <li><a href="#">Каталог</a></li>
+                          <ul class="catalog-menu">
+                              <li><a href="#">Новинки</a></li>
+                              <li><a href="catalog.html">Сливочное</a></li>
+                              <li><a href="#">Щербеты</a></li>
+                              <li><a href="#">Фруктовый лед</a></li>
+                              <li><a href="#">Мелорин</a></li>
+                          </ul>
+                  <li><a href="#">Доставка и оплата</a></li>
+                  <li><a href="#">О компании</a></li>
+              </ul>
+              <div class="search">
+                  <a href="#"><img src="#" alt="Поиск"></a>
+              </div>
+              <div class="search-hover">
+                  <form>
+                      <input type="serch" name="search" placeholder="Что ищем?">
+                  </form>
+              </div>
+              <div class="user">
+                  <a href="#">Вход</a>
+              </div>
+              <div class="user-hover">
+                  <form action="#">
+                      <input type="email" name="email" placeholder="Электронная почта">
+                      <input type="password" name="password" placeholder="Пароль">
+                      <input type="submit" value="Войти" class="button">
+                      <a href="#">Забыли пароль?</a>
+                      <a href="#">Новая регистрация</a>
+                  </form>
+              </div>
+              <div class="basket">
+                  <a href="#">Корзина</a>
+              </div>
+          </div>    
+      </header>
+      <main>
+          <div class="container">
+              <div class="time">C 10 до 20, ежедневно <br>
+                                8 812 450 25 25
+              </div>
+              <div class="slider">
+                  <h1> Крем-брюле и пломбир <br> 
+                        С малиновым джемом</h1>
+                  <a href="#" class="button">Дайте оба</a>
+              </div>
+              <div class="stock">
+                  <section class="stock-left">
+                      <h2>Малинка даром</h2>
+                      <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
+                      <a href="#" class="button">Хочу варенье!</a>
+                  </section>
+                  <section class="stock-right">
+                      <h2>Шоколадки даром</h2>
+                      <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+                      <a href="#" class="button">Хочу шоколадки!</a>
+                  </section>
+              </div>
+              <div class="goods">
+                  <article>
+                      <img src="#" alt="">
+                      <span class="price">310Р/кг</span>
+                      <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                      <a href="#" class="button">Быстрый просмотр</a>
+                  </article>
+                  <article>
+                      <img src="#" alt="">
+                      <span class="price">380Р/кг</span>
+                      <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
+                      <a href="#" class="button">Быстрый просмотр</a>
+                  </article>
+                  <article>
+                      <img src="#" alt="">
+                      <span class="price">355Р/кг</span>
+                      <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                      <a href="#" class="button">Быстрый просмотр</a>
+                  </article>
+                  <article>
+                      <img src="#" alt="">
+                      <span class="price">415Р/кг</span>
+                      <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
+                      <a href="#" class="button">Быстрый просмотр</a>
+                  </article>
+              </div>
+              <div class="features">
+                  <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
+                  <div class="features-left">
+                      <div class="feature">
+                          <img src="#" alt="">
+                          <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+                      </div>
+                      <div class="feature">
+                          <img src="#" alt="">
+                          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+                      </div>
+                  </div>
+                  <div class="features-right">
+                      <div class="feature">
+                          <img src="#" alt="">
+                          <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+                      </div>
+                      <div class="feature">
+                          <img src="#" alt="">
+                          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="news">
+                  <div class="news-left">
+                      <span class="news">Новое в нашем блоге</span>
+                      <a href="#" class="news-title">10 способов сервировки фруктовых щербетов к столу</a>
+                  </div>
+                  <div class="news-right">
+                      <p>Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+                      <form action="#" method="post">
+                          <input type="email" placeholder="Электронная почта" id="email">
+                          <input type="submit" value="Отправить" class="button">
+                      </form>
+                  </div>
+              </div>
+              <div class="map">
+                  <img src="#" alt="">
+              </div>
+          </div>
+      </main>
+      <footer>
+         <div class="container">
+              <section class="social">
+                  <a href="" class="social-btn"><img src="#" alt="Твиттер"></a>
+                  <a href="" class="social-btn"><img src="#" alt="Инстаграм"></a>
+                  <a href="" class="social-btn"><img src="#" alt="Фейсбук"></a>
+                  <a href="" class="social-btn"><img src="#" alt="Вконтакте"></a>
+              </section>
+              <section class="footer-menu">
+                  <a href="#">Для поставщиков</a>
+                  <a href="#">О производстве</a>
+                  <a href="#">Наши документы</a>
+                  <a href="#">Экологические стандарты</a>
+              </section>
+              <section class="html-academy">
+                  <img src="#" alt="logo">
+                  <span>Сделано в <a href="#">HTML Academy</a> © 2016</span> 
+              </section>
+          </div>
+      </footer>
+      <div class="feedback">
+         Мы обязательно вам ответим!
+          <form action="№">
+              <input type="text" placeholder="Как вас зовут?">
+              <input type="email" placeholder="Ваша почта для ответа?">
+              <textarea name="" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
+              <input type="submit" value="Отправить">
+          </form>
+      </div>
   </body>
 </html>
