--- a/index.html
+++ b/index.html
@@ -7,43 +7,45 @@
   <body>
       <header class="main-header">
           <div class="container">
-              <div class="logo">
-                  <img src="№" alt="">
-              </div>
-              <ul class="main-menu">
-                  <li><a href="#">Каталог</a></li>
-                          <ul class="catalog-menu">
-                              <li><a href="#">Новинки</a></li>
-                              <li><a href="catalog.html">Сливочное</a></li>
-                              <li><a href="#">Щербеты</a></li>
-                              <li><a href="#">Фруктовый лед</a></li>
-                              <li><a href="#">Мелорин</a></li>
-                          </ul>
-                  <li><a href="#">Доставка и оплата</a></li>
-                  <li><a href="#">О компании</a></li>
-              </ul>
+             <nav class="main-navigation">
+                 <div class="logo">
+                      <img src="http://placehold.it/150x100" alt="">
+                 </div>
+                 <ul class="main-menu">
+                      <li><a href="#">Каталог</a></li>
+                              <ul class="catalog-menu">
+                                  <li><a href="#" class="catalog-menu-new">Новинки</a></li>
+                                  <li><a href="catalog.html">Сливочное</a></li>
+                                  <li><a href="#">Щербеты</a></li>
+                                  <li><a href="#">Фруктовый лед</a></li>
+                                  <li><a href="#">Мелорин</a></li>
+                              </ul>
+                      <li><a href="#">Доставка и оплата</a></li>
+                      <li><a href="#">О компании</a></li>
+                  </ul>
+              </nav>
               <div class="search">
-                  <a href="#"><img src="#" alt="Поиск"></a>
+                  <a href="#" class="search-icon">Поиск</a>
               </div>
               <div class="search-hover">
-                  <form>
-                      <input type="serch" name="search" placeholder="Что ищем?">
+                  <form action="#" method="get">
+                      <input type="search" name="search" placeholder="Что ищем?">
                   </form>
               </div>
               <div class="user">
-                  <a href="#">Вход</a>
+                  <a href="#" class="login-icon">Вход</a>
               </div>
               <div class="user-hover">
-                  <form action="#">
+                  <form action="#" method="post">
                       <input type="email" name="email" placeholder="Электронная почта">
                       <input type="password" name="password" placeholder="Пароль">
-                      <input type="submit" value="Войти" class="button">
+                      <input type="submit" name="login" value="Войти" class="button">
                       <a href="#">Забыли пароль?</a>
                       <a href="#">Новая регистрация</a>
                   </form>
               </div>
               <div class="basket">
-                  <a href="#">Корзина</a>
+                  <a href="#" class="basket-icon">Пусто</a>
               </div>
           </div>    
       </header>
@@ -53,44 +55,44 @@
                                 8 812 450 25 25
               </div>
               <div class="slider">
-                  <h1> Крем-брюле и пломбир <br> 
+                  <h1> Крем-брюле и пломбир 
                         С малиновым джемом</h1>
-                  <a href="#" class="button">Дайте оба</a>
+                  <a href="#" class="slider-button">Давайте оба</a>
               </div>
-              <div class="stock">
-                  <section class="stock-left">
+              <div class="stocks">
+                  <section class="stock stock-left">
                       <h2>Малинка даром</h2>
                       <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
                       <a href="#" class="button">Хочу варенье!</a>
                   </section>
-                  <section class="stock-right">
+                  <section class="stock stock-right">
                       <h2>Шоколадки даром</h2>
                       <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
                       <a href="#" class="button">Хочу шоколадки!</a>
                   </section>
               </div>
               <div class="goods">
-                  <article>
-                      <img src="#" alt="">
-                      <span class="price">310Р/кг</span>
+                  <article class="hit-icon">
+                      <img src="http://placehold.it/150x100" alt="">
+                      <span class="price">310<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
-                      <img src="#" alt="">
-                      <span class="price">380Р/кг</span>
+                  <article class="hit-icon">
+                      <img src="http://placehold.it/150x100" alt="">
+                      <span class="price">380<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
-                      <img src="#" alt="">
-                      <span class="price">355Р/кг</span>
+                  <article class="hit-icon">
+                      <img src="http://placehold.it/150x100" alt="">
+                      <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
-                      <img src="#" alt="">
-                      <span class="price">415Р/кг</span>
+                  <article class="hit-icon">
+                      <img src="http://placehold.it/150x100" alt="">
+                      <span class="price">415<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
@@ -98,22 +100,18 @@
               <div class="features">
                   <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
                   <div class="features-left">
-                      <div class="feature">
-                          <img src="#" alt="">
+                      <div class="feature feature-ice-icon">
                           <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
                       </div>
-                      <div class="feature">
-                          <img src="#" alt="">
+                      <div class="feature feature-nature-icon">
                           <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
                       </div>
                   </div>
                   <div class="features-right">
-                      <div class="feature">
-                          <img src="#" alt="">
+                      <div class="feature feature-meat-icon">
                           <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
                       </div>
-                      <div class="feature">
-                          <img src="#" alt="">
+                      <div class="feature feature-ship-icon">
                           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
                       </div>
                   </div>
@@ -131,18 +129,18 @@
                       </form>
                   </div>
               </div>
-              <div class="map">
-                  <img src="#" alt="">
-              </div>
+          </div>
+          <div class="map">
+              <img src="http://placehold.it/150x100" alt="">
           </div>
       </main>
       <footer>
          <div class="container">
               <section class="social">
-                  <a href="" class="social-btn"><img src="#" alt="Твиттер"></a>
-                  <a href="" class="social-btn"><img src="#" alt="Инстаграм"></a>
-                  <a href="" class="social-btn"><img src="#" alt="Фейсбук"></a>
-                  <a href="" class="social-btn"><img src="#" alt="Вконтакте"></a>
+                  <a href="#" class="social-btn social-btn-tw">Твиттер</a>
+                  <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
+                  <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
+                  <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
               </section>
               <section class="footer-menu">
                   <a href="#">Для поставщиков</a>
@@ -151,14 +149,14 @@
                   <a href="#">Экологические стандарты</a>
               </section>
               <section class="html-academy">
-                  <img src="#" alt="logo">
-                  <span>Сделано в <a href="#">HTML Academy</a> © 2016</span> 
+                  <img src="http://placehold.it/150x100" alt="logo">
+                  <span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span> 
               </section>
           </div>
       </footer>
       <div class="feedback">
-         Мы обязательно вам ответим!
-          <form action="№">
+         <span class="feedback-title">Мы обязательно вам ответим!</span>
+          <form action="#" method="get">
               <input type="text" placeholder="Как вас зовут?">
               <input type="email" placeholder="Ваша почта для ответа?">
               <textarea name="" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
