--- a/catalog.html
+++ b/catalog.html
@@ -99,74 +99,74 @@
                       <input type="submit" value="Применить">
                   </form>
               </div>
-              <div class="goods">
-                  <article>
+              <div class="items">
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">310<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">380<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">415<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">325<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное с брусничным джемом</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">410<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-черничное с цельными ягодами черниики</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">375<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-лимонное с карамельной присыпкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">320<img src="http://placehold.it/20x20">/кг<span>
                       <a href="#" class="goods-title">Сливочное с шоколадной стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">440<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-ванильное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">435<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное с ментоловым сиропом</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title"Сливочное с кусочками черного шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article>
+                  <article class="item">
                       <img src="http://placehold.it/150x100" alt="">
                       <span class="price">420<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное с мятным сиропом</a>
