--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <div class="container">
              <nav class="main-navigation">
                  <div class="logo">
-                      <img src="http://placehold.it/150x100" alt="">
+                      <img src="img/index/Logo.svg" alt="">
                  </div>
                  <ul class="main-menu">
                       <li><a href="#">Каталог</a></li>
@@ -51,7 +51,7 @@
       </header>
       <main>
           <div class="container">
-              <div class="time">C 10 до 20, ежедневно <br>
+              <div class="time">C 10 до 20, ежедневно
                                 8 812 450 25 25
               </div>
               <div class="slider">
@@ -71,27 +71,27 @@
                       <a href="#" class="button">Хочу шоколадки!</a>
                   </section>
               </div>
-              <div class="goods">
-                  <article class="hit-icon">
-                      <img src="http://placehold.it/150x100" alt="">
+              <div class="items">
+                  <article class="item hit-icon">
+                      <img src="img/index/1.jpg" alt="">
                       <span class="price">310<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article class="hit-icon">
-                      <img src="http://placehold.it/150x100" alt="">
+                  <article class="item hit-icon">
+                      <img src="img/index/2.jpg" alt="">
                       <span class="price">380<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article class="hit-icon">
-                      <img src="http://placehold.it/150x100" alt="">
+                  <article class="item hit-icon">
+                      <img src="img/index/3.jpg" alt="">
                       <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
-                  <article class="hit-icon">
-                      <img src="http://placehold.it/150x100" alt="">
+                  <article class="item hit-icon">
+                      <img src="img/index/4.jpg" alt="">
                       <span class="price">415<img src="http://placehold.it/20x20">/кг</span>
                       <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
@@ -131,7 +131,7 @@
               </div>
           </div>
           <div class="map">
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/index/%D0%BA%D0%B0%D1%80%D1%82%D0%B0.jpg" alt="">
           </div>
       </main>
       <footer>
