--- a/catalog.html
+++ b/catalog.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Сливочное мороженое</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
       <header class="main-header">
           <div class="container">
               <nav class="main-navigation">
                  <div class="logo">
-                      <img src="http://placehold.it/150x100" alt="">
+                      <img src="img/index/logo.svg" alt="">
                  </div>
                  <ul class="main-menu">
-                      <li><a href="#" class="main-menu-active">Каталог</a></li>
+                      <li><a href="#" class="main-menu-active">Каталог</a>
                               <ul class="catalog-menu">
                                   <li><a href="#" class="catalog-menu-new">Новинки</a></li>
                                   <li><a class="catalog-menu-active">Сливочное</a></li>
@@ -20,6 +21,7 @@
                                   <li><a href="#">Фруктовый лед</a></li>
                                   <li><a href="#">Мелорин</a></li>
                               </ul>
+                      </li>
                       <li><a href="#">Доставка и оплата</a></li>
                       <li><a href="#">О компании</a></li>
                   </ul>
@@ -59,7 +61,7 @@
                   <li><a href="#">Каталог</a></li>
                   <li><a>Сливочное</a></li>
               </ul>
-              <h1>Сливочное мороженое</h1>
+              <h2>Сливочное мороженое</h2>
               <div class="filters">
                   <form action="#" method="post">
                       <label for="sort">Сортировка:</label>
@@ -101,74 +103,74 @@
               </div>
               <div class="items">
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">310<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/1.png" alt="">
+                      <span class="price">310<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">380<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/2.png" alt="">
+                      <span class="price">380<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/3.png" alt="">
+                      <span class="price">355<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">415<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/4.png" alt="">
+                      <span class="price">415<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">325<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/5.png" alt="">
+                      <span class="price">325<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное с брусничным джемом</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">410<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/6.png" alt="">
+                      <span class="price">410<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-черничное с цельными ягодами черниики</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">375<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/7.png" alt="">
+                      <span class="price">375<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-лимонное с карамельной присыпкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">320<img src="http://placehold.it/20x20">/кг<span>
+                      <img src="img/catalog/8.png" alt="">
+                      <span class="price">320<img src="img/index/rub.svg">/кг<span>
                       <a href="#" class="goods-title">Сливочное с шоколадной стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">440<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/9.png" alt="">
+                      <span class="price">440<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-ванильное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">435<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/10.png" alt="">
+                      <span class="price">435<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное с ментоловым сиропом</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/11.png" alt="">
+                      <span class="price">355<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title"Сливочное с кусочками черного шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item">
-                      <img src="http://placehold.it/150x100" alt="">
-                      <span class="price">420<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/catalog/12.png" alt="">
+                      <span class="price">420<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное с мятным сиропом</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
@@ -197,7 +199,7 @@
                   <a href="#">Экологические стандарты</a>
               </section>
               <section class="html-academy">
-                  <img src="http://placehold.it/150x100" alt="logo">
+                  <img src="img/index/htmlacademy.svg" alt="logo">
                   <span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span> 
               </section>
           </div>
