--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
       <header class="main-header">
           <div class="container">
              <nav class="main-navigation">
                  <div class="logo">
-                      <img src="img/index/Logo.svg" alt="">
+                      <img src="img/index/logo.svg" alt="">
                  </div>
                  <ul class="main-menu">
-                      <li><a href="#">Каталог</a></li>
+                      <li><a href="#">Каталог</a>
                               <ul class="catalog-menu">
                                   <li><a href="#" class="catalog-menu-new">Новинки</a></li>
                                   <li><a href="catalog.html">Сливочное</a></li>
@@ -20,6 +21,7 @@
                                   <li><a href="#">Фруктовый лед</a></li>
                                   <li><a href="#">Мелорин</a></li>
                               </ul>
+                      </li>
                       <li><a href="#">Доставка и оплата</a></li>
                       <li><a href="#">О компании</a></li>
                   </ul>
@@ -56,7 +58,17 @@
               </div>
               <div class="slider">
                   <h1> Крем-брюле и пломбир 
-                        С малиновым джемом</h1>
+                       с малиновым джемом</h1>
+                  <a href="#" class="slider-button">Давайте оба</a>
+              </div>
+              <div class="slider2">
+                  <h1> Шоколадный пломбир
+                       и лимонный сорбет </h1>
+                  <a href="#" class="slider-button">Давайте оба</a>
+              </div>
+              <div class="slider3" disabled>
+                  <h1> Пломбир с помадкой
+                        и клубничный щербет</h1>
                   <a href="#" class="slider-button">Давайте оба</a>
               </div>
               <div class="stocks">
@@ -73,26 +85,26 @@
               </div>
               <div class="items">
                   <article class="item hit-icon">
-                      <img src="img/index/1.jpg" alt="">
-                      <span class="price">310<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/1.png" alt="">
+                      <span class="price">310<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item hit-icon">
-                      <img src="img/index/2.jpg" alt="">
-                      <span class="price">380<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/2.png" alt="">
+                      <span class="price">380<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item hit-icon">
-                      <img src="img/index/3.jpg" alt="">
-                      <span class="price">355<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/3.png" alt="">
+                      <span class="price">355<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
                   <article class="item hit-icon">
-                      <img src="img/index/4.jpg" alt="">
-                      <span class="price">415<img src="http://placehold.it/20x20">/кг</span>
+                      <img src="img/index/4.png" alt="">
+                      <span class="price">415<img src="img/index/rub.svg">/кг</span>
                       <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                       <a href="#" class="button">Быстрый просмотр</a>
                   </article>
@@ -131,7 +143,7 @@
               </div>
           </div>
           <div class="map">
-              <img src="img/index/%D0%BA%D0%B0%D1%80%D1%82%D0%B0.jpg" alt="">
+              <img src="img/index/map.jpg" alt="">
           </div>
       </main>
       <footer>
@@ -149,7 +161,7 @@
                   <a href="#">Экологические стандарты</a>
               </section>
               <section class="html-academy">
-                  <img src="http://placehold.it/150x100" alt="logo">
+                  <img src="img/index/htmlacademy.svg" alt="logo">
                   <span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span> 
               </section>
           </div>
