--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
                   </form>
               </div>
               <div class="items clearfix">
-                    <article class="item hit-icon">
+                    <article class="item">
                           <div class="item-top">
                               <img src="img/index/1.png" alt="">
                               <span class="price">310<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -134,7 +134,7 @@
                           <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                           <div class="item-top">
                               <img src="img/index/2.png" alt="">
                               <span class="price">380<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -142,7 +142,7 @@
                           <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                          <div class="item-top">
                               <img src="img/index/3.png" alt="">
                               <span class="price">355<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -150,15 +150,15 @@
                           <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                          <div class="item-top">
                               <img src="img/index/4.png" alt="">
-                              <span class="price">415<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">415<img src="img/indx/rub.svg"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                           <div class="item-top">
                               <img src="img/catalog/5.png" alt="">
                               <span class="price">325<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -166,7 +166,7 @@
                           <a href="#" class="goods-title">Сливочное с брусничным джемом</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                           <div class="item-top">
                               <img src="img/catalog/6.png" alt="">
                               <span class="price">410<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -174,7 +174,7 @@
                           <a href="#" class="goods-title">Сливочно-черничное с цельными ягодами черники</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                          <div class="item-top">
                               <img src="img/catalog/7.png" alt="">
                               <span class="price">375<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -182,7 +182,7 @@
                           <a href="#" class="goods-title">Сливочно-лимонное с карамельной присыпкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                          <div class="item-top">
                               <img src="img/catalog/8.png" alt="">
                               <span class="price">320<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -190,7 +190,7 @@
                           <a href="#" class="goods-title">Сливочное с шоколадной стружкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                           <div class="item-top">
                               <img src="img/catalog/9.png" alt="">
                               <span class="price">440<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -198,7 +198,7 @@
                           <a href="#" class="goods-title">Сливочно-ванильное с кусочками шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                           <div class="item-top">
                               <img src="img/catalog/10.png" alt="">
                               <span class="price">435<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -206,7 +206,7 @@
                           <a href="#" class="goods-title">Сливочное с ментоловым сиропом</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                          <div class="item-top">
                               <img src="img/catalog/11.png" alt="">
                               <span class="price">355<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
@@ -214,7 +214,7 @@
                           <a href="#" class="goods-title">Сливочное с кусочками черного шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
                       </article>
-                      <article class="item hit-icon">
+                      <article class="item">
                          <div class="item-top">
                               <img src="img/catalog/12.png" alt="">
                               <span class="price">420<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
