--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-     <div class="wrapper">
+     <div class="wrapper wrapper-ice">
           <header class="main-header">
               <div class="container">
                  <nav class="main-navigation clearfix">
@@ -57,9 +57,9 @@
           <main>
               <div class="container">
                   <div class="time">C 10 до 20, ежедневно
-                                    8 812 450 25 25
+                      <span class="number">8 812 450 25 25</span>
                   </div>
-                  <div class="slider">
+                  <div class="slider1">
                       <h1> Крем-брюле и пломбир 
                            с малиновым джемом</h1>
                       <a href="#" class="slider-button">Давайте оба!</a>
@@ -86,7 +86,7 @@
                           <a href="#" class="button">Хочу шоколадки!</a>
                       </section>
                   </div>
-                  <div class="items">
+                  <div class="items clearfix">
                       <article class="item hit-icon">
                           <div class="item-top">
                               <img src="img/index/1.png" alt="">
@@ -160,18 +160,18 @@
           <footer class="main-footer">
              <div class="container clearfix">
                   <section class="social">
-                      <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-                      <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
-                      <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-                      <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+                      <a href="#" class="social-btn social-btn-tw"></a>
+                      <a href="#" class="social-btn social-btn-inst"></a>
+                      <a href="#" class="social-btn social-btn-fb"></a>
+                      <a href="#" class="social-btn social-btn-vk"></a>
                   </section>
                   <section class="footer-menu">
                       <div class="footer-menu-left">
-                          <a href="#">Для поставщиков</a>
+                          <a href="#" class="footer-active">Для поставщиков</span></a>
                           <a href="#">О производстве</a>
                       </div>
                       <div class="footer-menu-right">
-                          <a href="#">Наши документы</a>
+                          <a href="#" class="footer-active">Наши документы</a>
                           <a href="#">Экологические стандарты</a>
                       </div>
                   </section>
