--- a/catalog.html
+++ b/catalog.html
@@ -153,7 +153,7 @@
                       <article class="item">
                          <div class="item-top">
                               <img src="img/index/4.png" alt="">
-                              <span class="price">415<img src="img/indx/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">415<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
