--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <div class="wrapper">
+      <div class="wrapper-inner">
       <header class="main-header">
           <div class="container">
               <nav class="main-navigation clearfix">
@@ -14,7 +14,7 @@
                       <img src="img/index/logo.svg" alt="">
                  </div>
                  <ul class="main-menu">
-                      <li><a href="#" class="main-menu-active">Каталог</a>
+                      <li class="main-menu-active"><a href="#">Каталог</a>
                               <ul class="catalog-menu">
                                   <li><a href="#" class="catalog-menu-new">Новинки</a></li>
                                   <li><a class="catalog-menu-active">Сливочное</a></li>
@@ -24,12 +24,12 @@
                               </ul>
                       </li>
                       <li><a href="#">Доставка и оплата</a></li>
-                      <li><a href="#">О компании</a></li>
+                      <li><a href="#">О Компании</a></li>
                   </ul>
               </nav>
               <div class="user-block">
                   <div class="search">
-                      <a href="#" class="search-icon">Поиск</a>
+                      <a href="#" class="search-icon"></a>
                   </div>
                   <div class="search-hover">
                       <form action="#" method="get">
@@ -127,118 +127,144 @@
               </div>
               <div class="items clearfix">
                     <article class="item">
+                          <div class="item-active">
                           <div class="item-top">
                               <img src="img/index/1.png" alt="">
-                              <span class="price">310<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                          <div class="item-active">
                           <div class="item-top">
                               <img src="img/index/2.png" alt="">
-                              <span class="price">380<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                         <div class="item-active">
                          <div class="item-top">
                               <img src="img/index/3.png" alt="">
-                              <span class="price">355<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                         <div class="item-active">
                          <div class="item-top">
                               <img src="img/index/4.png" alt="">
-                              <span class="price">415<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                          <div class="item-active">
                           <div class="item-top">
                               <img src="img/catalog/5.png" alt="">
-                              <span class="price">325<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">325<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное с брусничным джемом</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                          <div class="item-active">
                           <div class="item-top">
                               <img src="img/catalog/6.png" alt="">
-                              <span class="price">410<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">410<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочно-черничное с цельными ягодами черники</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                         <div class="item-active">
                          <div class="item-top">
                               <img src="img/catalog/7.png" alt="">
-                              <span class="price">375<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">375<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочно-лимонное с карамельной присыпкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                         <div class="item-active">
                          <div class="item-top">
                               <img src="img/catalog/8.png" alt="">
-                              <span class="price">320<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">320<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное с шоколадной стружкой</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                          <div class="item-active">
                           <div class="item-top">
                               <img src="img/catalog/9.png" alt="">
-                              <span class="price">440<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">440<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочно-ванильное с кусочками шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                          <div class="item-active">
                           <div class="item-top">
                               <img src="img/catalog/10.png" alt="">
-                              <span class="price">435<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">435<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное с ментоловым сиропом</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                         <div class="item-active">
                          <div class="item-top">
                               <img src="img/catalog/11.png" alt="">
-                              <span class="price">355<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное с кусочками черного шоколада</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>
                       <article class="item">
+                         <div class="item-active">
                          <div class="item-top">
                               <img src="img/catalog/12.png" alt="">
-                              <span class="price">420<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                              <span class="price">420<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
                           </div>
                           <a href="#" class="goods-title">Сливочное с мятным сиропом</a>
                           <a href="#" class="button">Быстрый просмотр</a>
+                          </div>
                       </article>  
               </div>
-              <div class="paginator">
+              <div class="paginator clearfix">
+                  <a href="" class="paginator-controls page-before"></a>
                   <a class="paginator-active">1</a>
-                  <a href="">2</a>
-                  <a href="">3</a>
-                  <a href="">4</a>
-                  <a href="">5</a>
+                  <a href="#">2</a>
+                  <a href="#">3</a>
+                  <a href="#">4</a>
+                  <a href="#">5</a>
+                  <a href="#" class="paginator-controls page-after"></a>
               </div>
           </div>
       </main>
       <footer class="main-footer">
              <div class="container clearfix">
                   <section class="social">
-                      <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-                      <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
-                      <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-                      <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+                      <a href="#" class="social-btn social-btn-tw"></a>
+                      <a href="#" class="social-btn social-btn-inst"></a>
+                      <a href="#" class="social-btn social-btn-fb"></a>
+                      <a href="#" class="social-btn social-btn-vk"></a>
                   </section>
                   <section class="footer-menu">
                       <div class="footer-menu-left">
