--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
   </head>
   <body>
-     <div class="wrapper wrapper-ice">
+     <input type="radio" id="btn-1" name="toggle" checked>
+     <input type="radio" id="btn-2" name="toggle">
+     <input type="radio" id="btn-3" name="toggle">
+     <div class="wrapper">
           <header class="main-header">
               <div class="container">
                  <nav class="main-navigation clearfix">
@@ -24,29 +28,29 @@
                                   </ul>
                           </li>
                           <li><a href="#">Доставка и оплата</a></li>
-                          <li><a href="#">О компании</a></li>
+                          <li><a href="#">О Компании</a></li>
                       </ul>
                   </nav>
                   <div class="user-block">
                       <div class="search">
-                          <a href="#" class="search-icon">Поиск</a>
-                      </div>
-                      <div class="search-hover">
-                          <form action="#" method="get">
-                              <input type="search" name="search" placeholder="Что ищем?">
-                          </form>
+                          <a href="#" class="search-icon"></a>
+                          <div class="search-hover">
+                              <form action="#" method="get">
+                                  <input type="search" name="search" placeholder="Что ищем?">
+                              </form>
+                          </div>
                       </div>
                       <div class="user">
                           <a href="#" class="login-icon">Вход</a>
-                      </div>
-                      <div class="user-hover">
-                          <form action="#" method="post">
-                              <input type="email" name="email" placeholder="Электронная почта">
-                              <input type="password" name="password" placeholder="Пароль">
-                              <input type="submit" name="login" value="Войти" class="button">
-                              <a href="#">Забыли пароль?</a>
-                              <a href="#">Новая регистрация</a>
-                          </form>
+                          <div class="user-hover">
+                              <form action="#" method="post">
+                                  <input type="email" name="email" placeholder="Электронная почта">
+                                  <input type="password" name="password" placeholder="Пароль">
+                                  <input type="submit" name="login" value="Войти" class="button">
+                                  <a href="#">Забыли пароль?</a>
+                                  <a href="#">Новая регистрация</a>
+                              </form>
+                          </div>
                       </div>
                       <div class="basket">
                           <a href="#" class="basket-icon">Пусто</a>
@@ -57,22 +61,29 @@
           <main>
               <div class="container">
                   <div class="time">C 10 до 20, ежедневно
-                      <span class="number">8 812 450 25 25</span>
+                      <span class="number">8 812 450 25-25</span>
                   </div>
-                  <div class="slider1">
-                      <h1> Крем-брюле и пломбир 
+                  <div class="slider">
+                      <div class="slide" id="slide1">
+                          <h1 class="slide-title"> Крем-брюле и пломбир 
                            с малиновым джемом</h1>
-                      <a href="#" class="slider-button">Давайте оба!</a>
-                  </div>
-                  <div class="slider2">
-                      <h1> Шоколадный пломбир
+                          <a href="#" class="slider-button">Давайте оба!</a>
+                      </div>
+                      <div class="slide" id="slide2">
+                          <h1 class="slide-title">Шоколадный пломбир
                            и лимонный сорбет </h1>
-                      <a href="#" class="slider-button">Давайте оба!</a>
-                  </div>
-                  <div class="slider3" disabled>
-                      <h1> Пломбир с помадкой
+                          <a href="#" class="slider-button">Давайте оба!</a>
+                      </div>
+                      <div class="slide" id="slide3">
+                          <h1 class="slide-title"> Пломбир с помадкой
                             и клубничный щербет</h1>
-                      <a href="#" class="slider-button">Давайте оба!</a>
+                          <a href="#" class="slider-button">Давайте оба!</a>
+                      </div>
+                      <div class="slider-controls">
+                          <label for="btn-1"></label>
+                          <label for="btn-2"></label>
+                          <label for="btn-3"></label>
+                      </div>
                   </div>
                   <div class="stocks">
                       <section class="stock stock-left clearfix">
@@ -88,43 +99,51 @@
                   </div>
                   <div class="items clearfix">
                       <article class="item hit-icon">
-                          <div class="item-top">
-                              <img src="img/index/1.png" alt="">
-                              <span class="price">310<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                         <div class="item-active">
+                              <div class="item-top">
+                                  <img src="img/index/1.png" alt="Изображение товара">
+                                  <span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                              </div>
+                              <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                              <a href="#" class="button">Быстрый просмотр</a>
                           </div>
-                          <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                          <a href="#" class="button">Быстрый просмотр</a>
                       </article>
                       <article class="item hit-icon">
-                          <div class="item-top">
-                              <img src="img/index/2.png" alt="">
-                              <span class="price">380<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          <div class="item-active">
+                              <div class="item-top">
+                                  <img src="img/index/2.png" alt="Изображение товара">
+                                  <span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                              </div>
+                              <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
+                              <a href="#" class="button">Быстрый просмотр</a>
                           </div>
-                          <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
-                          <a href="#" class="button">Быстрый просмотр</a>
                       </article>
                       <article class="item hit-icon">
-                         <div class="item-top">
-                              <img src="img/index/3.png" alt="">
-                              <span class="price">355<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          <div class="item-active">
+                             <div class="item-top">
+                                  <img src="img/index/3.png" alt="Изображение товара">
+                                  <span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                              </div>
+                              <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                              <a href="#" class="button">Быстрый просмотр</a>
                           </div>
-                          <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                          <a href="#" class="button">Быстрый просмотр</a>
                       </article>
                       <article class="item hit-icon">
-                         <div class="item-top">
-                              <img src="img/index/4.png" alt="">
-                              <span class="price">415<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          <div class="item-active">
+                             <div class="item-top">
+                                  <img src="img/index/4.png" alt="Изображение товара">
+                                  <span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                              </div>
+                              <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
+                              <a href="#" class="button">Быстрый просмотр</a>
                           </div>
-                          <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
-                          <a href="#" class="button">Быстрый просмотр</a>
                       </article>
                   </div>
                   <div class="features clearfix">
-                      <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
+                      <h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
                       <div class="features-left">
                           <div class="feature feature-ice-icon">
-                              <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+                              <p>Все наше мороженое изготавливается на собственном производстве, с использованием&nbspсовременного оборудования и проверенных временем технологий.</p>
                           </div>
                           <div class="feature feature-nature-icon">
                               <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
@@ -132,10 +151,10 @@
                       </div>
                       <div class="features-right">
                           <div class="feature feature-meat-icon">
-                              <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+                              <p>Закупка ингредиентов производится только у&nbspпроверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
                           </div>
                           <div class="feature feature-ship-icon">
-                              <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+                              <p>Доставка нашего мороженого до заказчиков&nbspосуществляется в специальном термопаке, который не дает мороженому растаять&nbspв пути и позволяет сохранить превосходный вкус.</p>
                           </div>
                       </div>
                   </div>
@@ -154,11 +173,22 @@
                   </div>
               </div>
               <div class="map">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705241!2d30.320889251850033!3d59.93879418178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1471539736899" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705241!2d30.320889251850033!3d59.93879418178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1471539736899" width="100%" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
           </main>
           <footer class="main-footer">
              <div class="container clearfix">
+                  <div class="feedback-form">
+                      <span class="feedback-form-title">Адрес главного офиса и
+                      офлайн магазина:</span>
+                      <span class="feeback-form-info">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+                      <span class="feedback-form-title">Для заказов по телефону:</span>
+                      <span class="feeback-form-info">8 812 450-25-25</span>
+                      <span class="feedback-form-title">(с 10 до 20 ежедневно)</span>
+                      <form action="#" method="get">
+                          <input type="submit" value="Форма обратной связи" class="button feedback-form-btn">
+                      </form>
+                  </div>
                   <section class="social">
                       <a href="#" class="social-btn social-btn-tw"></a>
                       <a href="#" class="social-btn social-btn-inst"></a>
@@ -167,12 +197,12 @@
                   </section>
                   <section class="footer-menu">
                       <div class="footer-menu-left">
-                          <a href="#" class="footer-active">Для поставщиков</span></a>
-                          <a href="#">О производстве</a>
+                          <a href="#" class="footer-active">Для поставщиков</a>
+                          <a href="#" class="footer-active">О производстве</a>
                       </div>
                       <div class="footer-menu-right">
                           <a href="#" class="footer-active">Наши документы</a>
-                          <a href="#">Экологические стандарты</a>
+                          <a href="#" class="footer-active">Экологические стандарты</a>
                       </div>
                   </section>
                   <section class="html-academy">
@@ -189,7 +219,7 @@
           <form action="#" method="get">
               <input type="text" placeholder="Как вас зовут?">
               <input type="email" placeholder="Ваша почта для ответа?">
-              <textarea name="" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
+              <textarea name="feedback-text" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
               <input type="submit" value="Отправить">
           </form>
       </div>
